Add page content endpoint
